# arc-protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  RED_TEAM_FINDINGS.md  SECURITY.md  SPEC.md  arc_shell.py  live_witness.py  pyproject.toml  verify.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  lint.yml  publish.yml
arc_log/: __init__.py  merkle.py  server.py  storage.py
demo/: README.md  arc_tests.py  arc_witness.py  demo_basic.py  demo_disaster.py  demo_replit.py  demo_verify.py
docs/: compliance_map.md  evaluation_methodology_notes.md  faq.md  getting_started.md  index.md  integration_guide.md  log_api.md  proof_of_concept.md  protocol_analysis_notes.md  protocol_overview.md  red_team_report.md  schemas.md  signing_specification.md
paper/: ARC_PROTOCOL_PAPER.md  arc_paper.tex  compile.sh  references.md
paper/figures/: architecture.md  test_results.md  threat_model.md
schemas/: action-receipt.schema.json  intent.schema.json  provider-attestation.schema.json
scripts/: run_red_team.py
src/arc/: __init__.py  decorator.py  ids.py  log_client.py  merkle.py  receipt.py  signing.py  snapshot.py
src/arc/schemas/: before-state.schema.json  inverse-operation.schema.json  log-entry.schema.json  provider-registration.schema.json
tests/: conftest.py  test_decorator.py  test_e2e.py  test_log.py  test_merkle.py  test_receipt.py  test_signing.py
tests/red_team/: conftest.py  test_attack_1_fabrication.py  test_attack_2_log_tamper.py  test_attack_3_fake_sig.py  test_attack_4_rollback_lie.py  test_attack_5_replay.py  test_attack_6_backdate.py  test_edge_cases.py  test_live_scenario.py  test_v11_surfaces.py
website/: index.html
