[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-protocol"
version = "1.1.0"
description = "Agent Receipt and Certification: cryptographic proof of execution for AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "cryptography", "audit", "compliance", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
arc-log = "arc_log.server:main"

[project.urls]
Homepage = "https://github.com/RamachandraKulkarni/arc-protocol"
Documentation = "https://github.com/RamachandraKulkarni/arc-protocol/tree/master/docs"
Repository = "https://github.com/RamachandraKulkarni/arc-protocol"
Issues = "https://github.com/RamachandraKulkarni/arc-protocol/issues"

[tool.setuptools]
packages = ["arc", "arc_log"]

[tool.setuptools.package-dir]
"arc" = "src/arc"
"arc_log" = "arc_log"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
